# nstu

./: .clang-format  .gitignore  2.c  3.c  4.c  6.c  README.md  last.c
1gun/: input.dxd  input.txt  main.c
2gun/: main.c
3dKG/6lab/: Cargo.toml
3dKG/src/: main.rs
3dProg/2gun/: main.c
3dProg/3gun/: child.c  main.c
3dProg/4gun_easy/: client.c
3dProg/5gun/: server.c
3dProg/6gun/: client.c  dllheader.h  server.c
3dProg/7gun/: main.c
3dProg/8gun/: client.c
3dProg/CW/: server.c  service.c  test.c
3dProg/CW/NamedPipes/: client.c  server.c  service.c
3dProg/CW/TCP/: server.c  service.c
3gun/: anime.dxd
4gun/: 3.dxd  client.c  main.c  server.c
4gun_easy/: .clang-format  client.c  server.c
5dProg/BCD/: lab1.tex  main.c
5dProg/CC/: Cargo.toml
5dProg/CC/src/: main.rs
5dProg/COC/: main.c
5dProg/CWC/: main.c
5dProg/HAM/: main.c
5gun/: .clang-format  client.c  server.c
6dProg/Cat/: Cat.md
6dProg/UDP/: main.c  tcpdump
6dProg/hash/src/: lib.rs
6dProg/parall/: Cargo.toml
6dProg/parall/src/utils/: mod.rs
6dProg/stack/: Cargo.toml
6dProg/stack/src/: lib.rs
6dProg/tree/src/: lib.rs
6dProg/vector/src/: lib.rs
6gun/: client.c  dllfuncs.c  server.c
7dProg/ai/1/: 1.pl  2.pl
7dProg/db/lab3/: Cargo.toml  connect.sh  db_creation.sql  drop_all.sql  start.sh
7dProg/gun/1/: Makefile  main.c
7dProg/gun/2/: Makefile  lib.c  main.c
7dProg/gun/3/: Makefile  main.c
7dProg/gun/4/: Makefile  child.c  info.h  lib.c  main.c
7dProg/gun/5/: child.c  defines.h  input_file1  server.c
7gun/: anime.tx  main.c
8gun/: client.c  server.c
(+27 files in other folders)
