[package]
name = "parall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
src = "src/bin/server/"

[[bin]]
name = "worker"
src = "src/bin/worker/"


[dependencies]
md5 = "0.7.0"
zmq = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
bincode = "1.3.3"
rand = "0.8.5"